fix post styling

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,8 +8,12 @@ li{
 }
 </style>
 
-<ul>
-  <li><a href="/">Home</a></li>
-  <li><a href="/yurith-says/">Posts</a></li>
-  <li><a href="/about">About</a></li>
-</ul>
+<div id="NavBar">
+  <div class="nav-bar-content content-boundary">
+    <a class="nav-bar-button" href="/services">Services</a>
+    <a class="nav-bar-button" href="/projects">Projects</a>
+    <a class="nav-bar-button" href="/yurith-says/">Blog</a>
+    <a class="nav-bar-button" href="/about">About</a>
+    <a class="nav-bar-button" href="/contact">Contact</a>
+  </div>
+</div>
