--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,14 +4,29 @@ layout: default
 
 
 
-{% if page.hero %}
-	<img class="hero-img" src="{{page.hero}}">
-{% endif %}
 
-{% if page.title%}
-	<h1>{{page.title}}</h1>
-{% else %}
-	<h1>Untitled post</h1>
-{% endif %}
-{{ page.date | date: "%b %d, %Y" }}
-{{ content }}
+
+<div id="Post">
+	<div class="post-nav-wrapper">
+		<ul class="post-nav">
+			{% for post in site.posts %}
+				<li class="post-index"><a href="{{ post.url | relative_url }}">{{post.title}}</a></li>
+			{% endfor %}
+		</ul>
+	</div>
+	<div class="post-container">
+		{% if page.hero %}
+			<div class="post-hero-img-wrapper" style="background-image: url({{page.hero}})" >
+			</div>
+		{% endif %}
+		<div class="post-info">
+			{% if page.title%}
+				<h1>{{page.title}}</h1>
+			{% else %}
+				<h1>Untitled post</h1>
+			{% endif %}
+			{{ page.date | date: "%b %d, %Y" }}
+			{{ content }}
+		</div>
+	</div>
+</div>
