--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -10,10 +10,10 @@ li{
 
 <div id="NavBar">
   <div class="nav-bar-content content-boundary">
-    <a class="nav-bar-button" href="/services">Services</a>
-    <a class="nav-bar-button" href="/projects">Projects</a>
-    <a class="nav-bar-button" href="/yurith-says/">Blog</a>
-    <a class="nav-bar-button" href="/about">About</a>
-    <a class="nav-bar-button" href="/contact">Contact</a>
+    <a class="nav-bar-button" href="https://yurith-rubio.github.io/services">Services</a>
+    <a class="nav-bar-button" href="https://yurith-rubio.github.io/projects">Projects</a>
+    <a class="nav-bar-button" href="https://yurith-rubio.github.io/yurith-says/">Blog</a>
+    <a class="nav-bar-button" href="https://yurith-rubio.github.io/about">About</a>
+    <a class="nav-bar-button" href="https://yurith-rubio.github.io/contact">Contact</a>
   </div>
 </div>
