--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -10,6 +10,7 @@ $light-green: #F0FFD9;
 $bg-color: #007ABE;
 $accents: #fff;
 $orange: #ff6000;
+$link-color: #fae730;
 
 body {
   background-color: #007ABE;
