--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -133,6 +133,9 @@ a {
 
 code{
   background-color: #061d30;
-  padding: 5px 10px;
   border-radius: 3px;
+}
+
+highlight code{
+  padding: 5px 10px;
 }
