--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -4,17 +4,17 @@
   --orange: #ff6000;
 }
 
-$text-color: #00456c;
+$text-color: #002e47;
 $highlights: #9DCF75;
 $light-green: #F0FFD9;
-$bg-color: #00456c;
+$bg-color: #002e47;
 $accents: #fff;
 $orange: #ff6000;
 $link-color: #8fffcb;
 $text-code: #75ff74;
 
 body {
-  background-color: #00456c;
+  background-color: #002e47;
   color: $light-green;
   font-family: 'Open Sans', sans-serif;
   line-height: 1.4;
