--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -20,7 +20,7 @@ body {
   line-height: 1.4;
   margin: 0;
 }
-h1, a{
+h1, h2, a{
   color: $link-color;
 }
 
@@ -140,6 +140,7 @@ a {
 code.language-plaintext.highlighter-rouge{
   font-weight: bold;
   color: $text-code;
+  font-family: inherit;
 }
 
 .language-plaintext.highlighter-rouge .highlight{
