--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -149,6 +149,7 @@ code.language-plaintext.highlighter-rouge{
   padding: 1px 15px;
 }
 
-highlight code{
+.highlight code{
   padding: 5px 10px;
+  text-wrap: wrap;
 }
